ver 0.16.2 (2011/??/??)
* decoder:
  - tremor: fix configure test
  - gme: detect end of song
* output:
  - httpd: fix uninitialized variable
  - oss: AFMT_S24_PACKED is little-endian


ver 0.16.1 (2011/01/09)
* audio_check: fix parameter in prototype
* add void casts to suppress "result unused" warnings (clang)
* input:
  - ffado: disable by default
* decoder:
  - mad: work around build failure on Solaris
  - resolve modplug vs. libsndfile cflags/headers conflict
* output:
  - solaris: add missing parameter to open_cloexec() cal
  - osx: fix up audio format first, then apply it to device
* player_thread: discard empty chunks while cross-fading
* player_thread: fix assertion failure due to early seek
* output_thread: fix double lock


ver 0.16 (2010/12/11)
* protocol:
  - send song modification time to client
  - added "update" idle event
  - removed the deprecated "volume" command
  - added the "findadd" command
  - range support for "delete"
  - "previous" really plays the previous song
  - "addid" with negative position is deprecated
  - "load" supports remote playlists (extm3u, pls, asx, xspf, lastfm://)
  - allow changing replay gain mode on-the-fly
  - omitting the range end is possible
  - "update" checks if the path is malformed
* archive:
  - iso: renamed plugin to "iso9660"
  - zip: renamed plugin to "zzip"
* input:
  - lastfm: obsolete plugin removed
  - ffmpeg: new input plugin using libavformat's "avio" library
* tags:
  - added tags "ArtistSort", "AlbumArtistSort"
  - id3: revised "performer" tag support
  - id3: support multiple values
  - ape: MusicBrainz tags
  - ape: support multiple values
* decoders:
  - don't try a plugin twice (MIME type & suffix)
  - don't fall back to "mad" unless no plugin matches
  - ffmpeg: support multiple tags
  - ffmpeg: convert metadata to generic format
  - ffmpeg: implement the libavutil log callback
  - sndfile: new decoder plugin based on libsndfile
  - flac: moved CUE sheet support to a playlist plugin