@@ -5,6 +5,7 @@ ver 0.16.2 (2011/??/??)
 * output:
   - httpd: fix uninitialized variable
   - oss: AFMT_S24_PACKED is little-endian
+  - oss: disable 24 bit playback on FreeBSD
 
 
 ver 0.16.1 (2011/01/09)
